--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/lf8_starter_db
 spring.datasource.username=lf8_starter
 spring.datasource.password=secret
 server.port=8080
-spring.jpa.hibernate.ddl-auto=create-drop
-
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.application.name=lf8_starter
